@@ -1,1 +1,3 @@
 # MiXOrcamento
+
+vm-options: --add-modules=javafx.controls,javafx.fxml
